--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,18 +9,18 @@ run:criptomoeda
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:auto
     branches:autocreat [ "main" ]
-  pull_request:
+  pull_request:format create 
     branches:autocreat [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  workflow_dispatch:autocreat 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
+jobs:restore
   # This workflow contains a single job called "build"
-  build:
+  build:run
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on:autocreat ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
