--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,29 +1,29 @@
-//SPDX-License-Identifier MIT 
-programa solidity 0.8.19 
-contrato criptomoeda terrareal 
-import Criptomoeda.TR.sol is a basic workflow to help you get started with Actions
-name:terrareal 
-símbolo:TR 
+//SPDX-License-Identifier: MIT 
+programa solidity: 0.8.19 
+contrato: criptomoeda terrareal 
+import: Criptomoeda.TR.sol is a basic workflow to help you get started with Actions
+name: terrareal 
+símbolo: TR 
 # Controls when the workflow will run
-run:criptomoeda 
+run: criptomoeda 
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:auto
-    branches:autocreat [ "main" ]
-  pull_request:format create 
-    branches:autocreat [ "main" ]
+  push: auto
+    branches: autocreat [ "main" ]
+  pull_request: format create 
+    branches: autocreat [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:autocreat 
+  workflow_dispatch: autocreat 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:restore
+jobs: restore
   # This workflow contains a single job called "build"
-  build:run
+  build: run
     # The type of runner that the job will run on
-    runs-on:autocreat ubuntu-latest
+    runs-on: autocreat ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps: autocreat 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
