--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,6 @@
 // SPDX-License-Identifier: MIT
-pragma solidity ^0.8.0;
-
-contract TerraReal {
+pragma solidity: ^0.8.0;
+ contract TerraReal {
     string public name = "Terra Real";
     string public symbol = "TR";
     uint8 public decimals = 0;
